--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,3 +1,5 @@
+@use 'variable';
+
 .main {
   display: flex;
   flex-direction: column;
@@ -5,7 +7,6 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
-  background-color: beige;
 }
 
 .description {
