--- a/app/login/login.scss
+++ b/app/login/login.scss
@@ -6,6 +6,10 @@
 }
 
 .container {
-    height: 40%;
-    width: 60%;
+    margin-top: 10%;
+}
+
+.login-form {
+    height: 300px;
+    width: 500px;
 }
