Added statistics component

--- a/app/components/Menu/menu.scss
+++ b/app/components/Menu/menu.scss
@@ -1,3 +1,5 @@
+@import './../../variables.module';
+
 .menu {
   width: 100%;
   height: 100px;
@@ -16,5 +18,5 @@
 }
 
 .selected {
-  border-bottom: 1px solid red;
+  font-weight: 900;
 }
