--- a/app/components/Total/total.scss
+++ b/app/components/Total/total.scss
@@ -1,3 +1,4 @@
+@import './../../variables.module.scss';
 .total-section {
     width: 100%;
 }
@@ -9,5 +10,5 @@
 .details {
     font-size: 1rem;
     font-weight: normal;
-    color: #c2c2c2
+    color: $color-secondary;
 }
