Added signup and Merge conflics resolved.

--- a/app/login/login.scss
+++ b/app/login/login.scss
@@ -13,3 +13,12 @@
   height: 300px;
   width: 300px;
 }
+
+.signup-form {
+  height: 300px;
+  width: 100%;
+}
+
+.signup-container {
+  margin: 10%;
+}
