--- a/app/login/login.scss
+++ b/app/login/login.scss
@@ -12,11 +12,19 @@
 .login-form {
   height: 300px;
   width: 300px;
+  .ant-input-number {
+    width: 100%;
+    font-size: 16px;
+  }
 }
 
 .signup-form {
   height: 300px;
   width: 100%;
+  .ant-input-number {
+    width: 100%;
+    font-size: 16px;
+  }
 }
 
 .signup-container {
