API integration started

--- a/app/dashboard/dashboard.scss
+++ b/app/dashboard/dashboard.scss
@@ -4,7 +4,7 @@
   justify-content: space-around;
 }
 
-.container {
+.dashboard-container {
   border-radius: 8;
   overflow: "hidden";
   width: calc(60% - 8px);
