--- a/app/components/ModalContent/new-transaction.scss
+++ b/app/components/ModalContent/new-transaction.scss
@@ -1,3 +1,7 @@
+.new-transaction-wrapper .ant-form-item {
+  margin-bottom: 10px;
+}
+
 .new-transaction-wrapper .ant-input-number {
   width: 100%;
   height: 100px;
@@ -13,6 +17,7 @@
 .new-transaction-wrapper .ant-picker {
   height: 45px;
   margin-bottom: 1rem;
+  width: 100%;
 }
 
 .new-transaction-wrapper .ant-segmented,
